# AI-Testing

./: README.md  TODO.md
resources/: README.md
resources/shaders/: backup.fs  basic.vs  cube.fs  cube.vs  minecraft.fs  minecraft.vs
src/: CMakeLists.txt  Cube.cpp  Cube.hpp  Drawable.hpp  MinecraftCube.cpp  MinecraftCube.hpp  Scene.cpp  Scene.hpp  Tetrahedron.cpp  Tetrahedron.hpp  main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/InputManager/: InputManager.cpp  InputManager.hpp
src/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.hpp
src/Textures/: Texture.cpp  Texture.hpp
src/Utils/: tga.cpp  tga.h
src/WindowManager/: WindowManager.cpp  WindowManager.hpp
